finished decision tree module

--- a/3-classification/07_decision_trees_demo.ipynb
+++ b/3-classification/07_decision_trees_demo.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "e51e1a0d",
    "metadata": {},
    "outputs": [
@@ -691,11 +691,13 @@
     "\n",
     "dr = DecisionTreeRegressor().fit(X_train, y_train)\n",
     "\n",
+    "# Base the parameter grid values on the naive fit from above\n",
     "param_grid = {'max_depth':range(1, dr.tree_.max_depth+1, 2),\n",
     "              'max_features': range(1, len(dr.feature_importances_)+1)}\n",
     "\n",
     "GR_sugar = GridSearchCV(DecisionTreeRegressor(random_state=42),\n",
     "                     param_grid=param_grid,\n",
+    "                     # Maximising *neg* MSE, so minimizing MSE\n",
     "                     scoring='neg_mean_squared_error',\n",
     "                      n_jobs=-1)\n",
     "\n",
