Almost finished with module 4 of unsupervised learning

--- a/4-unsupervised-learning/8-clustering-demo.ipynb
+++ b/4-unsupervised-learning/8-clustering-demo.ipynb
@@ -405,7 +405,7 @@
    "source": [
     "## Correlation and Skew\n",
     "\n",
-    "Let's do some more EDA with polars. We'll explore skew and the correlation bewteen variables.\n",
+    "Let's do some more EDA with polars. We'll explore skew and the correlation between variables.\n",
     "\n",
     "For this we'll ignore the categorical variables."
    ]
@@ -440,7 +440,7 @@
     "    .select(ps.numeric())\n",
     "    # Calculate correlation matrix\n",
     "    .corr()\n",
-    "    # Pipe correlation amtrix for further processing\n",
+    "    # Pipe correlation matrix for further processing\n",
     "    .pipe(\n",
     "        lambda c: \n",
     "            # Replace the diagonal values with 0.0\n",
@@ -556,7 +556,7 @@
    "id": "92b922cc",
    "metadata": {},
    "source": [
-    "Finally, we can use the standard scaler fo transform our data"
+    "Finally, we can use the standard scaler to transform our data. Many distance metrics are very sensitive to scale since they weigh each dimension equally (euclidean distance and manhattan distance for example). This makes it so that dimensions with larger magnitude values have more impact on the distance calculation."
    ]
   },
   {
@@ -611,7 +611,9 @@
    "source": [
     "## Fitting a Kmeans Cluster\n",
     "\n",
-    "We can fit a 2-cluster KMeans model easily. Then we assign the result of the clustering back into the dataframe and then group and sort by the color and found cluster."
+    "We can fit a 2-cluster KMeans model easily. Then we assign the result of the clustering back into the dataframe and then group and sort by the color and found cluster.\n",
+    "\n",
+    "We'll remove the non-float columns, and fit just on the numeric parameters. This way we will try to see if we can recover the classification of red vs white wines."
    ]
   },
   {
@@ -1279,6 +1281,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f976d211",
+   "metadata": {},
+   "source": [
+    "Ideally, we would recover perfect coincidence of one of the found clusters with 'red' and the other cluster with 'white'.\n",
+    "\n",
+    "We can get the result below:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "f072a704",
@@ -1330,6 +1342,23 @@
    "id": "d81204e4",
    "metadata": {},
    "source": [
+    "We could interpret this result as a confusion matrix. Cluster 0 clearly captures more of the 'redness' of the wine, while cluster 1 captures more of the 'whiteness'.\n",
+    "\n",
+    "The confusion matrix would look like this (it is a bit tough to do this programmatically since the cluster assignment is random)\n",
+    "\n",
+    "|       | 0(red) | 1(white) |\n",
+    "|-------|--------|----------|\n",
+    "| RED   | 1576   | 23       |\n",
+    "| WHITE | 87     | 4811     |\n",
+    "\n",
+    "Interpreted as a classification algorithm, this would give\n",
+    "- Accuracy => 0.983\n",
+    "- Precision => 0.9856\n",
+    "- Recall => 0.9477\n",
+    "- F1-score => 0.9663\n",
+    "\n",
+    "Pretty good overall.\n",
+    "\n",
     "## Finding the best value of K\n",
     "\n",
     "Just 2 clusters is probably not the best number for our data, so let's investigate the dependence of the fit quality on K."
@@ -1381,13 +1410,11 @@
    "id": "8b23f058",
    "metadata": {},
    "source": [
-    "There is no clear point where the elbow method would recommend a best K. However, the inertia is going down with the amount of clusters. It seems that choosing K in the range of 6-14 would work best in this case.\n",
-    "\n",
-    "But mostly, it seems that KMeans is not capable of finding a good K for this dataset. Let's try with a few different clustering methods.\n",
+    "There is no clear point where the elbow method would recommend a best K. However, the inertia is going down with the amount of clusters. This could be because there are multiple methods of clustering this dataset that we know of; the wine type ('red', 'white') or the quality of the wine (1-9). Maybe these compete to result in a lack of a clear elbow.\n",
     "\n",
     "## Agglomerative Clustering\n",
     "\n",
-    "With agglomerative clustering we start at a relatively large number of clusters and keep combining clusters that lie close to each other until their size is above a certain threshold."
+    "With agglomerative clustering we start at a relatively large number of clusters and keep combining clusters that lie close to each other until their size is above a certain threshold. Or in this case until there are 2 clusters remaining."
    ]
   },
   {
